--- a/pizza/package.json
+++ b/pizza/package.json
@@ -30,6 +30,7 @@
         "sessionstore": "^1.3.7",
         "shelljs": "^0.8.4",
         "showdown": "^1.9.1",
+        "tibet": "^5.5",
         "winston": "^3.3.3"
     },
     "devDependencies": {
